--- a/exercise/Cópia_de_iris_modelo.ipynb
+++ b/exercise/Cópia_de_iris_modelo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMYPo3zkrmOR2KS+jpgFy7",
+      "authorship_tag": "ABX9TyOaTHNlvp5vCAlhdL7Bd0ct",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,8 +23,61 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/juanalistapablo/Introdu-o-a-perceptron/blob/main/C%C3%B3pia_de_iris_modelo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/juanalistapablo/Introdu-o-a-perceptron/blob/main/exercise/C%C3%B3pia_de_iris_modelo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Proposta de Atividade: Classificação de Flores com o Perceptron"
+      ],
+      "metadata": {
+        "id": "Bn1X_TUsXlQ0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "Objetivo da Atividade:\n",
+        "O objetivo dessa atividade é aprender a utilizar o modelo de perceptron para resolver um problema de classificação binária utilizando o famoso dataset Iris. Especificamente, vamos construir um modelo de perceptron para classificar se uma flor é Setosa ou não, com base nas características de comprimento e largura das pétalas.\n",
+        "\n",
+        "\n",
+        "Contextualização:\n",
+        "O dataset Iris é amplamente utilizado em aprendizado de máquina, contendo medições de 150 flores de 3 espécies diferentes: Setosa, Versicolor e Virginica. Cada flor possui quatro características: comprimento e largura da sépala, e comprimento e largura da pétala. A tarefa será transformar este problema de classificação multiclasse em um problema binário, onde o modelo deverá classificar se a flor é Setosa (sim) ou não Setosa (não).\n",
+        "\n",
+        "Importância do Perceptron:\n",
+        "O perceptron é um dos algoritmos mais simples de redes neurais, sendo um classificador linear. Ele é usado para separar dois grupos de dados com uma linha reta ou um hiperplano. Embora seja um modelo básico, o perceptron é fundamental para entender como as redes neurais funcionam e serve como a base para arquiteturas mais complexas. Nesta atividade, vamos aplicar o perceptron em uma tarefa de classificação binária, utilizando duas das quatro características do dataset Iris, o comprimento da pétala e a largura da pétala, para determinar se uma flor é Setosa ou não.\n",
+        "\n",
+        "Metodologia da Atividade:\n",
+        "A atividade será dividida em várias etapas:\n",
+        "\n",
+        "Carregamento e Preparação dos Dados:\n",
+        "O primeiro passo é carregar o dataset Iris e preparar os dados. Vamos utilizar apenas as características de comprimento e largura da pétala, pois são suficientes para a separação entre Setosa e não Setosa. Além disso, os rótulos das flores serão transformados para um formato binário: 1 para Setosa e 0 para todas as outras espécies.\n",
+        "\n",
+        "Padronização das Características:\n",
+        "A padronização das características é essencial para que o modelo perceptron possa aprender de forma mais eficiente. A padronização transforma os dados para que todas as variáveis tenham média zero e desvio padrão um, facilitando a convergência durante o treinamento.\n",
+        "\n",
+        "Implementação do Modelo Perceptron:\n",
+        "A seguir, será implementado um modelo perceptron simples utilizando o framework PyTorch. O modelo será composto por uma camada linear seguida de uma função de ativação sigmóide, que vai gerar uma probabilidade para classificar a flor como Setosa (1) ou não Setosa (0).\n",
+        "\n",
+        "Treinamento do Modelo:\n",
+        "O perceptron será treinado utilizando a função de perda binária de entropia cruzada (BCELoss) e o otimizador de gradiente estocástico (SGD). O objetivo é minimizar a perda e ajustar os pesos do modelo para melhorar sua capacidade de prever a classe correta das flores.\n",
+        "\n",
+        "Avaliação do Modelo:\n",
+        "Após o treinamento, o modelo será avaliado no conjunto de teste para verificar sua capacidade de generalização. A acurácia será calculada comparando as previsões do modelo com os rótulos reais. O desempenho do modelo será medido, e a acurácia final será discutida.\n",
+        "\n",
+        "Resultados Esperados:\n",
+        "Ao final da atividade, espera-se que o modelo perceptron consiga classificar corretamente as flores como Setosa ou não Setosa com uma boa taxa de acurácia, evidenciando como um modelo simples pode resolver um problema de classificação. Além disso, os alunos terão uma compreensão prática de como preparar dados, treinar um modelo de perceptron e avaliar seu desempenho.\n",
+        "\n",
+        "Conclusão:\n",
+        "Esta atividade proporciona uma introdução prática ao uso do perceptron para classificação binária. Ela demonstra como até modelos simples podem ser eficazes em tarefas de aprendizado de máquina, ao mesmo tempo em que oferece uma base para compreender conceitos mais avançados em redes neurais e aprendizado supervisionado."
+      ],
+      "metadata": {
+        "id": "AHEApB3kXem-"
+      }
     },
     {
       "cell_type": "markdown",
